[tool.poetry]
name = "html-work"
version = "0.1.0"
description = ""
authors = ["artemm <artem.m2013@gmail.com>"]
readme = "README.md"
packages = [{include = "html_work"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
